Fix styling and alignment

--- a/packages/widgets/src/styles/Checkbox.module.scss
+++ b/packages/widgets/src/styles/Checkbox.module.scss
@@ -4,8 +4,7 @@
 .checkboxes-group {
 	display: flex;
 	flex-direction: column;
-	row-gap: 5px;
-	padding-left: 3px;
+	row-gap: 3px;
 }
 
 .checkboxes-group--label {
@@ -32,7 +31,7 @@
 .checkbox {
 	width: 18px;
 	height: 18px;
-	box-shadow: 0 0 0 1px colors.$stone-300;
+	border: 1px solid colors.$stone-300;
 	border-radius: 4px;
 	background: white;
 	display: flex;
@@ -54,7 +53,8 @@
 }
 
 .focus {
-	box-shadow: inset 0 0 0 1px colors.$sky-600, 0 0 0 1px colors.$sky-600 !important;
+	border-color: colors.$sky-600;
+	box-shadow: 0 0 0 1px colors.$sky-600;
 }
 
 .disabled {
@@ -63,7 +63,8 @@
 
 	.checkbox {
 		background: colors.$stone-100;
-		box-shadow: 0 0 0 1px colors.$stone-200 !important;
+		border-color: colors.$stone-200 !important;
+		box-shadow: none !important;
 	}
 }
 
@@ -72,6 +73,7 @@
 	color: colors.$amber-600;
 
 	&.focus {
-		box-shadow: inset 0 0 0 1px colors.$amber-600, 0 0 0 1px colors.$amber-600 !important;
+		border-color: colors.$amber-600;
+		box-shadow: 0 0 0 1px colors.$amber-600 !important;
 	}
 }
