--- a/packages/widgets/src/styles/Switch.module.scss
+++ b/packages/widgets/src/styles/Switch.module.scss
@@ -14,8 +14,8 @@
 
 .checkbox {
 	width: 32px;
-	height: 18px;
-	box-shadow: 0 0 0 1px colors.$stone-300;
+	height: 20px;
+	border: 1px solid colors.$stone-300;
 	border-radius: 4px;
 	background: white;
 	display: flex;
@@ -34,7 +34,7 @@
 		background: colors.$stone-300;
 		border-radius: 3px;
 		top: 50%;
-		left: 1px;
+		left: 2px;
 		transform: translate(0, -50%);
 		z-index: 1;
 	}
@@ -52,12 +52,13 @@
 
 	&::before {
 		background: colors.$sky-600;
-		transform: translate(12px, -50%);
+		transform: translate(10px, -50%);
 	}
 }
 
 .focus {
-	box-shadow: 0 0 0 2px colors.$sky-600 !important;
+	border-color: colors.$sky-600;
+	box-shadow: 0 0 0 1px colors.$sky-600;
 }
 
 .disabled {
@@ -66,7 +67,8 @@
 
 	.checkbox {
 		background: colors.$stone-100;
-		box-shadow: 0 0 0 1px colors.$stone-200 !important;
+		border-color: colors.$stone-200 !important;
+		box-shadow: none !important;
 
 		&::before {
 			background: colors.$stone-200 !important;
@@ -83,6 +85,7 @@
 	}
 
 	&.focus {
-		box-shadow: 0 0 0 2px colors.$amber-600 !important;
+		border-color: colors.$amber-600;
+		box-shadow: 0 0 0 1px colors.$amber-600;
 	}
 }
