--- a/packages/widgets/src/styles/TextField.module.scss
+++ b/packages/widgets/src/styles/TextField.module.scss
@@ -5,6 +5,7 @@
 	display: flex;
 	flex-direction: column;
 	position: relative;
+	row-gap: 3px;
 }
 
 .label {
@@ -35,11 +36,10 @@
 }
 
 .input-action {
-	margin: 3px;
 	display: flex;
 	column-gap: 3px;
 	align-items: center;
-	box-shadow: 0 0 0 1px colors.$stone-300;
+	border: 1px solid colors.$stone-300;
 	border-radius: 4px;
 	background: white;
 	padding: 0 5px;
@@ -50,14 +50,17 @@
 }
 
 .focus {
-	box-shadow: inset 0 0 0 1px colors.$sky-600, 0 0 0 1px colors.$sky-600 !important;
+	border-color: colors.$sky-600;
+	box-shadow: inset 0 0 0 1px colors.$sky-600;
 }
 
 .error {
-	box-shadow: 0 0 0 1px colors.$rose-400, 0 0 0 3px colors.$rose-100 !important;
+	border-color: colors.$rose-400;
+	box-shadow: 0 0 0 3px colors.$rose-100;
 
 	&.focus {
-		box-shadow: inset 0 0 0 1px colors.$rose-600, 0 0 0 1px colors.$rose-600 !important;
+		border-color: colors.$rose-600;
+		box-shadow: inset 0 0 0 1px colors.$rose-600;
 	}
 
 	.description {
@@ -67,7 +70,8 @@
 
 .read-only {
 	&.focus {
-		box-shadow: inset 0 0 0 1px colors.$amber-300, 0 0 0 1px colors.$amber-300 !important;
+		border-color: colors.$amber-300;
+		box-shadow: inset 0 0 0 1px colors.$amber-300;
 	}
 }
 
@@ -117,7 +121,7 @@
 
 	.input-action,
 	&.input-action {
-		box-shadow: 0 0 0 1px colors.$stone-200 !important;
+		border-color: colors.$stone-200 !important;
 	}
 }
 
